--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
   "name": "manhattan-essentials",
-  "version": "0.0.12",
-  "description": "A set of essential functions for JavaScript used by (probably) all manhattan JS packages.",
-  "main": "dist/index.js",
+  "version": "0.1.0",
+  "description": "A set of essential functions for manhattan JavaScript packages.",
+  "engines": {
+    "node": ">=8.9.4"
+  },
+  "main": "umd/index.js",
+  "module": "module/index.js",
+  "files": [
+    "module",
+    "umd"
+  ],
   "scripts": {
-    "dist": "NODE_ENV=dist webpack --progress",
-    "live": "webpack-dev-server --progress",
-    "watch": "webpack --watch --progress",
-    "test": "mocha --require coffee-script/register --compilers coffee:coffee-script"
+    "build": "webpack",
+    "lint": "eslint src spec *.js --no-ignore",
+    "test": "cross-env NODE_ENV=test nyc mocha ./spec/**/*.spec.js || exit 0",
+    "watch": "webpack --watch"
+  },
+  "nyc": {
+    "exclude": [
+      "spec/setup.js",
+      "spec/**/*.spec.js"
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "sourceMap": false,
+    "instrument": false
   },
   "repository": {
     "type": "git",
@@ -19,17 +42,19 @@
   "author": "Anthony Blackshaw",
   "license": "MIT",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "coffee-loader": "^0.7.2",
-    "coffee-script": "^1.11.1",
-    "coffeelint": "^1.16.0",
-    "coffeelint-loader": "^0.1.1",
-    "jsdom": "^9.8.3",
-    "mocha": "^3.1.2",
-    "mocha-jsdom": "^1.1.0",
-    "sinon": "^1.17.6",
-    "sinon-chai": "^2.8.0",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.3",
+    "eslint": "^4.18.1",
+    "jsdom": "^11.6.2",
+    "mocha": "^5.0.1",
+    "nyc": "^11.4.1",
+    "sinon": "^4.3.0",
+    "sinon-chai": "^2.14.0",
+    "webpack": "^3.11.0"
   }
 }
