Changed the location of the git repository

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.getme.co.uk:manhattan/manhattan_js_essentials.git"
+    "url": "git@github.com:GetmeUK/manhattan-js-essentials.git"
   },
   "keywords": [
     "manhattan"
