Minor updates to the build process to ensure, silenced npm ERR! output on build and watch and added a .nrmrc file.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "umd"
   ],
   "scripts": {
-    "build": "webpack",
+    "build": "webpack || exit 0",
     "lint": "eslint module spec *.js --quiet",
     "test": "cross-env NODE_ENV=test nyc mocha ./spec/**/*.spec.js || exit 0",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch || exit 0"
   },
   "nyc": {
     "exclude": [
