--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "umd"
   ],
   "scripts": {
-    "build": "webpack || exit 0",
+    "build": "webpack --mode production || exit 0",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "dev-build": "webpack --mode development || exit 0",
     "lint": "eslint module spec *.js --quiet || exit 0",
     "test": "cross-env NODE_ENV=test nyc mocha ./spec/**/*.spec.js || exit 0",
-    "watch": "webpack --watch || exit 0"
+    "watch": "webpack --mode development --watch || exit 0"
   },
   "nyc": {
     "exclude": [
@@ -58,6 +59,7 @@
     "nyc": "^11.4.1",
     "sinon": "^4.3.0",
     "sinon-chai": "^2.14.0",
-    "webpack": "^3.11.0"
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9"
   }
 }
